# templates

./: .gitignore  License
cpp_cmake/: .gitignore  Makefile
cpp_cmake/src/: CMakeLists.txt  main.cpp
react_frontend/: .eslintrc.json  .gitignore  Readme.md  package.json
react_frontend/src/: index.js
react_frontend/src/api/: downloadEndpoint1.js  downloadEndpoint2.js
react_frontend/src/assets/css/: base.css  fonts.scss  normalize.css
react_frontend/src/assets/css/fonts/: font-public-sans.scss
react_frontend/src/components/: App.js  withRedux.js
react_frontend/src/components/pages/: DownloadPage.js  LoremIpsumPage.js  MainPage.js  NotFoundPage.js  ReduxPage.js  TextPage.js
react_frontend/src/components/utils/: GoBackLink.js  Title.js  Title.module.css
react_frontend/src/hooks/: useEndpoint1Data.js
react_frontend/src/redux/: actionTypes.js  reducer.js
react_frontend/src/redux/actions/: clearEndpoint1.js  clearEndpoint2.js  setEndpoint1.js  setEndpoint2.js  setPageTitle.js
react_frontend/src/redux/reducers/: endpoint1.js  endpoint2.js  pageTitle.js
react_frontend/src/utils/: api.js  browser.js  isDev.js  utils.js
